@@ -1985,6 +1985,7 @@ Available group-name values:
 their content (e.g. regular files in views)
  \- AuxWin \- color of auxiliary areas of windows
  \- Border \- color of vertical parts of the border
+ \- TabLine \- tab line color
  \- TopLineSel \- top line color of the current pane
  \- TopLine \- top line color of the other pane
  \- CmdLine \- the command line/status bar color
@@ -2155,6 +2156,7 @@ transparency:
             OtherLine
   TopLine
     TopLineSel
+  TabLine
 
 "none" means default terminal color for highlight groups at the first level of
 the hierarchy and transparency for all others.
@@ -5801,7 +5803,7 @@ Look of different parts of the TUI (Text User Interface) is determined in \
 this way:
 .RS 2
 .IP \- 2
-Border, TopLineSel, TopLine, CmdLine, ErrorMsg, StatusLine, JobLine, \
+Border, TabLine, TopLineSel, TopLine, CmdLine, ErrorMsg, StatusLine, JobLine, \
 SuggestBox and WildMenu are always determined by the primary color scheme;
 .IP \- 2
 CurrLine, Selected, Directory, Link, BrokenLink, Socket, Device, Executable, \
