@@ -1688,6 +1688,7 @@ Available group-name values:
          their content (e.g. regular files in views)
  - AuxWin - color of auxiliary areas of windows
  - Border - color of vertical parts of the border
+ - TabLine - tab line color
  - TopLineSel - top line color of the current pane
  - TopLine - top line color of the other pane
  - CmdLine - the command line/status bar color
@@ -1858,6 +1859,7 @@ transparency:
             OtherLine
   TopLine
     TopLineSel
+  TabLine
 
 "none" means default terminal color for highlight groups at the first level
 of the hierarchy and transparency for all others.
@@ -4883,8 +4885,9 @@ Both types are set using |vifm-:colorscheme| command, but of different forms:
 
 Look of different parts of the TUI (Text User Interface) is determined in
 this way:
-   - Border, TopLineSel, TopLine, CmdLine, ErrorMsg, StatusLine, JobLine,
-     SuggestBox and WildMenu are always determined by the primary color scheme
+   - Border, TabLine, TopLineSel, TopLine, CmdLine, ErrorMsg, StatusLine,
+     JobLine, SuggestBox and WildMenu are always determined by the primary
+     color scheme
    - CurrLine, Selected, Directory, Link, BrokenLink, Socket, Device,
      Executable, Fifo, CmpMismatch, Win and AuxWin are determined by primary
      color scheme and a set of local color schemes, which can be empty
